--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -11,6 +11,7 @@
     			background-repeat: no-repeat;
     			background-size: 102%;
     			background-image: url('/back.svg');
+				background-attachment: fixed;
     			font-family: 'Inter';
     			font-size: 25px;
 			}
